# towerdefense

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
includes/glad/: glad.h
src/: CMakeLists.txt  config.cpp  config.h  entity.h  glad.c  linear_algebra.cpp  linear_algebra.h  main.cpp  material.cpp  material.h  triangle_mesh.cpp  triangle_mesh.h
src/components/: camera_component.h  render_component.h
src/controller/: app.cpp  entity_manager.cpp  entity_manager.h
src/shaders/: fragment.frag  vertex.vert
src/view/: shader.cpp
tests/: CMakeLists.txt  entity_manager-test.cpp  vector3-test.cpp
